--- a/notebooks/01_minimal_mmm_example.ipynb
+++ b/notebooks/01_minimal_mmm_example.ipynb
@@ -366,7 +366,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "def compute_channel_contributions(model: MMM) -> pd.DataFrame:\n    \"\"\"Compute mean channel contributions over time in original scale.\n    \n    Args:\n        model: Fitted MMM model\n        \n    Returns:\n        DataFrame with channel contributions in original scale\n    \"\"\"\n    contributions = model.compute_mean_contributions_over_time(original_scale=True)\n    rprint(\"[bold green]Channel contributions computed (original scale)[/bold green]\")\n    return contributions\n\n\ncontributions = compute_channel_contributions(mmm)\nrprint(contributions.head())"
+   "source": [
+    "def compute_channel_contributions(model: MMM) -> pd.DataFrame:\n",
+    "    \"\"\"Compute mean channel contributions over time in original scale.\n",
+    "    \n",
+    "    Args:\n",
+    "        model: Fitted MMM model\n",
+    "        \n",
+    "    Returns:\n",
+    "        DataFrame with channel contributions in original scale\n",
+    "    \"\"\"\n",
+    "    contributions = model.compute_mean_contributions_over_time(original_scale=True)\n",
+    "    rprint(\"[bold green]Channel contributions computed (original scale)[/bold green]\")\n",
+    "    return contributions\n",
+    "\n",
+    "\n",
+    "contributions = compute_channel_contributions(mmm)\n",
+    "rprint(contributions.head())"
+   ]
   },
   {
    "cell_type": "markdown",
